--- a/client/src/app/features/training-plans/edit-training-plan/edit-training-plan.component.scss
+++ b/client/src/app/features/training-plans/edit-training-plan/edit-training-plan.component.scss
@@ -1,3 +1,14 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+}
+
 #cover-image {
   cursor: pointer;
   width: 100%;
