Implement banner for all components

--- a/client/src/app/features/training-session/edit-training-session/edit-training-session.component.html
+++ b/client/src/app/features/training-session/edit-training-session/edit-training-session.component.html
@@ -1,35 +1,17 @@
-@if (loading()) {
+@if (!trainingSession) {
   <app-skeleton [height]="'12rem'" />
   @for (k of [1, 2]; track k) {
     <app-skeleton [height]="'4.25rem'" />
   }
 } @else {
-  <form (ngSubmit)="onConfirm()">
-    @if (isCropView()) {
-      <image-cropper
-        id="cover-image"
-        [imageBase64]="image()!"
-        [maintainAspectRatio]="false"
-        (imageCropped)="imageCropped($event)"
-        format="png"
-      />
-    } @else {
-      <img #coverImage [src]="image() || placeholderCoverImage" alt="Cover Placeholder" id="cover-image" />
-    }
-    <input
-      type="file"
-      name="cover-image"
-      id="cover-image"
-      class="form-control-file position-absolute"
-      style="opacity: 0; width: 100%; height: 100%; top: 0; left: 0; cursor: pointer"
-      (change)="handleImageUpload($event)"
-    />
+  <app-training-banner [(imageSrc)]="trainingSession.coverImageBase64!" />
 
-    <app-floating-label-input [label]="'Title'" [(value)]="trainingSession()!.title" [required]="true" />
+  <div class="input-group">
+    <app-floating-label-input [label]="'Title'" [(value)]="trainingSession.title" [required]="true" />
 
     <app-floating-label-input
       [label]="'Gewichtsempfehlungen'"
-      [(value)]="trainingSession()!.weightRecommandationBase"
+      [(value)]="trainingSession.weightRecommendationBase"
       [required]="true"
       type="select"
       [options]="[
@@ -37,5 +19,5 @@
         { value: 'off', label: 'Keine' },
       ]"
     />
-  </form>
+  </div>
 }
