--- a/client/src/app/features/training-plans/training-view/create-training/create-training.component.html
+++ b/client/src/app/features/training-plans/training-view/create-training/create-training.component.html
@@ -1,56 +1,44 @@
-<div class="form-group text-center mb-4 position-relative">
-  <img
-    #coverImage
-    [src]="trainingPlanEditView.coverImageBase64() || placeholderCoverImage"
-    alt="Cover Bild Platzhalter"
-    id="cover-image"
-  />
-  <input
-    type="file"
-    id="cover-image-input"
-    class="form-control-file position-absolute"
-    style="opacity: 0; width: 100%; height: 100%; top: 0; left: 0; cursor: pointer"
-    (change)="handleImageUpload($event)"
+<app-training-banner [(imageSrc)]="trainingPlanEditView.coverImageBase64" />
+
+<div class="input-group">
+  <app-floating-label-input [label]="'Titel'" [(value)]="trainingPlanEditView.title" [required]="true" />
+
+  @if (trainingPlanTyp() === TrainingPlanType.PLAN) {
+    <app-floating-label-input
+      [label]="'Trainings / Woche'"
+      [(value)]="trainingPlanEditView.trainingFrequency"
+      [required]="true"
+      type="select"
+      [options]="[
+        { value: 3, label: '3' },
+        { value: 4, label: '4' },
+        { value: 5, label: '5' },
+        { value: 6, label: '6' },
+      ]"
+    />
+
+    <app-floating-label-input
+      [label]="'Blocklänge (Wochen)'"
+      [(value)]="trainingPlanEditView.trainingBlockLength"
+      [required]="true"
+      type="select"
+      [options]="[
+        { value: 3, label: '3' },
+        { value: 4, label: '4' },
+        { value: 5, label: '5' },
+        { value: 6, label: '6' },
+      ]"
+    />
+  }
+
+  <app-floating-label-input
+    [label]="'Gewichtsempfehlungen'"
+    [(value)]="trainingPlanEditView.weightRecommendationBase"
+    [required]="true"
+    type="select"
+    [options]="[
+      { value: 'lastWeek', label: 'basierend auf letzter Woche' },
+      { value: 'off', label: 'keine Gewichtsempfehlungen' },
+    ]"
   />
 </div>
-
-<app-floating-label-input [label]="'Titel'" [(value)]="trainingPlanEditView.title" [required]="true" />
-
-@if (trainingPlanTyp() === TrainingPlanType.PLAN) {
-  <app-floating-label-input
-    [label]="'Trainings / Woche'"
-    [(value)]="trainingPlanEditView.trainingFrequency"
-    [required]="true"
-    type="select"
-    [options]="[
-      { value: 3, label: '3' },
-      { value: 4, label: '4' },
-      { value: 5, label: '5' },
-      { value: 6, label: '6' },
-    ]"
-  />
-
-  <app-floating-label-input
-    [label]="'Blocklänge (Wochen)'"
-    [(value)]="trainingPlanEditView.trainingBlockLength"
-    [required]="true"
-    type="select"
-    [options]="[
-      { value: 3, label: '3' },
-      { value: 4, label: '4' },
-      { value: 5, label: '5' },
-      { value: 6, label: '6' },
-    ]"
-  />
-}
-
-<app-floating-label-input
-  [label]="'Gewichtsempfehlungen'"
-  [(value)]="trainingPlanEditView.weightRecommendationBase"
-  [required]="true"
-  type="select"
-  [options]="[
-    { value: 'lastWeek', label: 'basierend auf letzter Woche' },
-    { value: 'off', label: 'keine Gewichtsempfehlungen' },
-  ]"
-/>
