--- a/client/src/app/features/training-plans/training-view/create-training/create-training.component.scss
+++ b/client/src/app/features/training-plans/training-view/create-training/create-training.component.scss
@@ -1,25 +1,10 @@
-.form-group {
-  position: relative;
+:host {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-#cover-image {
-  cursor: pointer;
-  width: 100%;
-  object-fit: cover;
-  margin-bottom: 1.5rem;
-  height: 12rem;
-
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-#cover-image-input {
-  opacity: 0;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  cursor: pointer;
+.input-group {
+  display: flex;
+  flex-direction: column;
 }
