--- a/client/src/app/features/training-session/edit-training-session/edit-training-session.component.scss
+++ b/client/src/app/features/training-session/edit-training-session/edit-training-session.component.scss
@@ -1,21 +1,10 @@
-#cover-image {
-  cursor: pointer;
-  width: 100%;
-  object-fit: cover;
-  margin-bottom: 1.5rem;
-  height: 12rem;
-
-  &:hover {
-    cursor: pointer;
-  }
+:host {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-#cover-image-input {
-  opacity: 0;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  cursor: pointer;
+.input-group {
+  display: flex;
+  flex-direction: column;
 }
