Deactivate auto complete for input component

--- a/client/src/app/shared/components/input/input.component.html
+++ b/client/src/app/shared/components/input/input.component.html
@@ -2,6 +2,7 @@
   @case ('interactiveElementDirective') {
     <input
       appInteractiveElement
+      autocomplete="off"
       [type]="type()"
       class="transparent-input"
       [name]="name()"
@@ -13,6 +14,7 @@
   @case ('weightInputDirective') {
     <input
       weightInput
+      autocomplete="off"
       [type]="type()"
       class="transparent-input"
       [name]="name()"
@@ -24,6 +26,7 @@
   @case ('repInputDirective') {
     <input
       repInputDirective
+      autocomplete="off"
       [type]="type()"
       class="transparent-input"
       [name]="name()"
@@ -35,6 +38,7 @@
   @case ('rpeInputDirective') {
     <input
       rpeInputDirective
+      autocomplete="off"
       [type]="type()"
       class="transparent-input"
       [name]="name()"
