Extracted more option list component + use in training card instead of modal

--- a/client/src/app/features/usage-statistics/training-day-notification-2/training-day-notification-2.component.html
+++ b/client/src/app/features/usage-statistics/training-day-notification-2/training-day-notification-2.component.html
@@ -11,4 +11,8 @@
     <h4>{{ notification().planTitle }}</h4>
     <p>{{ notification().startTime! | formatDate }}</p>
   </div>
+
+  <app-icon [name]="IconName.MORE_VERTICAL" [size]="20" (click)="toggleMoreOptionsCollapseState()" />
+
+  <app-more-options-list [options]="moreOptions()" [(isCollapsed)]="isMoreOptionsCollapsed" [position]="'left'" />
 </div>
