--- a/client/src/app/features/usage-statistics/training-day-notification-2/training-day-notification-2.component.scss
+++ b/client/src/app/features/usage-statistics/training-day-notification-2/training-day-notification-2.component.scss
@@ -47,6 +47,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    position: relative;
     h4 {
       margin: 0;
       font-size: 1.1rem;
