Add search functionality for training logs

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -10,6 +10,7 @@ app-rest-pause-time-indicator {
 
 @media screen and (max-width: 786px) {
   .outlet-wrapper {
+    padding-top: 4.25rem;
     padding-inline: 4%;
     padding-bottom: 7rem;
     min-height: 100vh;
