--- a/client/src/app/features/usage-statistics/training-day-notification/training-day-notification..component.html
+++ b/client/src/app/features/usage-statistics/training-day-notification/training-day-notification..component.html
@@ -14,5 +14,5 @@
 
   <app-icon [name]="IconName.MORE_VERTICAL" [size]="20" (click)="toggleMoreOptionsCollapseState()" />
 
-  <app-more-options-list [options]="moreOptions" [(isCollapsed)]="isMoreOptionsCollapsed" [position]="'left'" />
+  <app-more-options-list [options]="moreOptions" [(isCollapsed)]="isMoreOptionsCollapsed" [position]="'top'" />
 </div>
