--- a/client/src/app/shared/components/search-bar/search-bar.component.html
+++ b/client/src/app/shared/components/search-bar/search-bar.component.html
@@ -7,4 +7,4 @@
   placeholder="Search..."
   class="search-input"
 />
-<app-icon class="clear-search-bar-icon" [name]="IconName.X" [size]="18" [color]="'gray'" (clicked)="clearSearch()" />
+<app-icon class="clear-search-bar-icon" [name]="IconName.X" [size]="18" [color]="'gray'" (click)="clearSearch()" />
