--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -272,6 +272,11 @@
       <polyline points="23 20 23 14 17 14"></polyline>
       <path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"></path>
     }
+    @case (IconName.MORE_HORIZONTAL) {
+      <circle cx="12" cy="12" r="1"></circle>
+      <circle cx="19" cy="12" r="1"></circle>
+      <circle cx="5" cy="12" r="1"></circle>
+    }
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
     }
