Load more entries via lazy loading

--- a/client/src/app/features/profile-2/training-logs/training-logs.component.html
+++ b/client/src/app/features/profile-2/training-logs/training-logs.component.html
@@ -14,6 +14,10 @@
       </div>
     }
   }
+
+  <div class="more-entries-container">
+    <app-button [variant]="'SECONDARY'" [textContent]="'Mehr Einträge laden'" (click)="loadLogEntries()" />
+  </div>
 } @else {
   <div class="grid">
     @for (k of [1, 2, 3]; track k) {
