--- a/client/src/app/features/profile-2/training-logs/training-logs.component.scss
+++ b/client/src/app/features/profile-2/training-logs/training-logs.component.scss
@@ -1,13 +1,13 @@
-.test {
-  display: grid;
-  gap: 0.75rem;
-  grid-template-columns: repeat(2, 1fr);
-}
-
 .grid {
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(min(20rem, 100%), 1fr));
   max-width: 100%;
   margin: 0 auto;
+}
+
+.more-entries-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 1rem;
 }
