Add date picker with two way binding

--- a/client/src/app/features/profile-2/training-logs/training-logs.component.scss
+++ b/client/src/app/features/profile-2/training-logs/training-logs.component.scss
@@ -5,3 +5,10 @@
   max-width: 100%;
   margin: 0 auto;
 }
+
+.search-bar-container {
+  width: 90vw;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
