--- a/client/src/app/shared/components/datepicker/date-picker.component.html
+++ b/client/src/app/shared/components/datepicker/date-picker.component.html
@@ -1,2 +1,1 @@
-<input type="date" (change)="onDateSelect($event)" />
-<p *ngIf="selectedDate">Selected Date: {{ selectedDate() | date }}</p>
+<input type="date" [(value)]="templateDate" />
