--- a/client/src/app/features/profile-2/training-logs/training-logs.component.html
+++ b/client/src/app/features/profile-2/training-logs/training-logs.component.html
@@ -1,10 +1,10 @@
-<app-date-picker />
-
 @if (trainingDayNotifications$ | async; as trainingDayNotifications) {
   @if (trainingDayNotifications.length === 0) {
     <app-alert [alertText]="'Hier werden später deine absolvierten Trainings angezeigt'" />
   } @else {
     <app-search-bar [(searchQuery)]="searchQuery" />
+
+    <app-date-picker [(selectedDate)]="trainingDateFilter" />
 
     @if (filteredTrainingNotifications().length === 0) {
       <app-alert [alertText]="'Es passen keine Trainings zu deiner aktuellen Suchanfrage'" />
