Remove logs directory from version control

--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -3,7 +3,7 @@
 </div>
 
 @if (isDragMode()) {
-  <div class="row" cdkDropList (cdkDropListDropped)="updateTrainingPlanOrder($event)">
+  <div class="row">
     @if (!isLoading()) {
       @if (filteredTrainingPlans().length === 0) {
         <app-alert alertText="Keine deiner bestehenden Trainingpläne passen zu dieser Suchanfrage!" />
