--- a/client/src/app/features/profile-2/profile.component.html
+++ b/client/src/app/features/profile-2/profile.component.html
@@ -18,7 +18,8 @@
       </div>
     </div>
   } @else {
-    <app-chart-skeleton [rows]="4" />
-    <app-chart-skeleton [rows]="4" />
+    <app-spinner />
   }
+} @else {
+  <app-spinner />
 }
