Use correct date formating in training card

--- a/client/src/app/features/training-plans/training-plan-card/training-plan-card.component.html
+++ b/client/src/app/features/training-plans/training-plan-card/training-plan-card.component.html
@@ -24,7 +24,7 @@
 
     <p class="card-text d-flex gap-2">
       <app-icon [name]="IconName.CALENDAR" [size]="15" />
-      {{ trainingPlan().lastUpdatedString }}
+      {{ trainingPlan().lastUpdated | formatDate }}
     </p>
 
     @if (trainingPlan().averageTrainingDayDuration) {
