--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -237,7 +237,7 @@
       <app-icon
         class="week-navigation-icon"
         [appTooltip]="'Vorherige Woche'"
-        (clicked)="navigateWeek(-1)"
+        (click)="navigateWeek(-1)"
         [name]="IconName.CHEVRON_LEFT"
         [size]="28"
       />
@@ -245,7 +245,7 @@
         class="week-navigation-icon"
         [appTooltip]="'Näcshte Woche'"
         [name]="IconName.CHEVRON_RIGHT"
-        (clicked)="navigateWeek(1)"
+        (click)="navigateWeek(1)"
         [size]="28"
       />
     </div>
