--- a/client/src/app/shared/components/spinner/spinner.component.scss
+++ b/client/src/app/shared/components/spinner/spinner.component.scss
@@ -3,7 +3,7 @@
   top: 100px;
   left: 0;
   width: 100%;
-  height: 72.5%;
+  height: 75%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -11,21 +11,31 @@
 }
 
 .loader {
-  width: 48px;
-  height: 48px;
-  border: 5px solid grey;
-  border-bottom-color: transparent;
+  width: 50px;
+  aspect-ratio: 1;
+  display: grid;
   border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
+  background:
+    linear-gradient(0deg, rgb(0 0 0/50%) 30%, #0000 0 70%, rgb(0 0 0/100%) 0) 50%/8% 100%,
+    linear-gradient(90deg, rgb(0 0 0/25%) 30%, #0000 0 70%, rgb(0 0 0/75%) 0) 50%/100% 8%;
+  background-repeat: no-repeat;
+  animation: l23 1s infinite steps(12);
 }
-
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
+.loader::before,
+.loader::after {
+  content: '';
+  grid-area: 1/1;
+  border-radius: 50%;
+  background: inherit;
+  opacity: 0.915;
+  transform: rotate(30deg);
+}
+.loader::after {
+  opacity: 0.83;
+  transform: rotate(60deg);
+}
+@keyframes l23 {
   100% {
-    transform: rotate(360deg);
+    transform: rotate(1turn);
   }
 }
