--- a/client/src/app/features/auth/auth-shared.scss
+++ b/client/src/app/features/auth/auth-shared.scss
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
+:host {
+  display: grid;
+  height: 100vh;
+  place-items: center;
+}
+
 ::ng-deep .outlet-wrapper {
   @media screen and (max-width: 768px) {
     padding-inline: 0% !important;
