--- a/client/src/app/features/auth/register/register.component.html
+++ b/client/src/app/features/auth/register/register.component.html
@@ -1,5 +1,5 @@
 <!-- Signup Form -->
-<section class="container forms">
+<!-- <section class="container forms">
   <div class="form signup">
     <div class="form-content">
       <header>Register</header>
@@ -69,4 +69,6 @@
 
 <div class="custom-google-login">
   <button (click)="triggerGoogleLogin()">Login with Google</button>
-</div>
+</div> -->
+
+<app-pulsating-circle [text]="'Start'" />
