Add button when popup cooldown exists

--- a/client/src/app/features/auth/register/register.component.html
+++ b/client/src/app/features/auth/register/register.component.html
@@ -71,4 +71,4 @@
   <button (click)="triggerGoogleLogin()">Login with Google</button>
 </div>
 
-<app-pulsating-circle [text]="'Start'" (click)="triggerGoogleLogin()" />
+<app-pulsating-circle [text]="'Start'" />
