Add fancy start page

--- a/client/src/app/features/auth/login-modal/login-modal.component.scss
+++ b/client/src/app/features/auth/login-modal/login-modal.component.scss
@@ -13,3 +13,10 @@
   justify-content: center; /* Center the content inside */
   align-items: center;
 }
+
+.info-text {
+  text-align: center;
+  color: #555;
+  font-size: 0.9rem;
+  padding-top: 1.5rem;
+}
