--- a/client/src/app/features/auth/components/pulsating-circle.component.scss
+++ b/client/src/app/features/auth/components/pulsating-circle.component.scss
@@ -1,7 +1,7 @@
 :host {
-  font-family: 'Poppins', sans-serif;
+  font-family: var(--ff-serif);
   text-transform: uppercase;
-  font-size: 1.5rem;
+  font-size: 1.85rem;
   color: white;
   position: relative;
   z-index: 1;
@@ -12,6 +12,7 @@
   aspect-ratio: 1;
   text-decoration: none;
   background-color: rgb(48, 48, 48);
+  transition: background-color 500ms ease-in-out;
 
   &::after {
     content: '';
@@ -26,6 +27,11 @@
     scale: 1.55;
     animation: pulsate-alternate 8s infinite;
   }
+
+  &:hover {
+    cursor: pointer;
+    background-color: rgb(64, 64, 64);
+  }
 }
 
 @keyframes pulsate-alternate {
@@ -35,20 +41,6 @@
 
   50% {
     transform: scale(1.05);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
-
-@keyframes pulsate {
-  0% {
-    transform: scale(1);
-  }
-
-  50% {
-    transform: scale(0.9925);
   }
 
   100% {
