--- a/client/src/app/features/auth/login-modal/login-modal.component.html
+++ b/client/src/app/features/auth/login-modal/login-modal.component.html
@@ -2,13 +2,13 @@
   [alertText]="
     'The Google sign-in popup is temporarily unavailable due to a cooldown. Please use the button below to sign in manually.'
   "
-></app-alert>
+/>
+
+<p class="info-text">Click below to sign in with Google manually.</p>
 
 <div class="line"></div>
 
-<p style="text-align: center; color: #555; font-size: 0.9rem">Click below to sign in with Google manually.</p>
-
-<div class="media-options" style="text-align: center; padding-top: 1rem">
+<div class="media-options">
   <div
     id="g_id_onload"
     data-client_id="745778541640-0f05iimgfid2tag6rkvilau5nqt69ko0.apps.googleusercontent.com"
