--- a/client/src/app/features/auth/register/register.component.html
+++ b/client/src/app/features/auth/register/register.component.html
@@ -1,74 +1,6 @@
-<!-- Signup Form -->
-<section class="container forms">
-  <div class="form signup">
-    <div class="form-content">
-      <header>Register</header>
-      <form (submit)="onSubmit($event)">
-        <div class="field input-field">
-          <input type="text" placeholder="Username" name="username" class="input" />
-        </div>
-        <div class="field input-field">
-          <input type="email" placeholder="Email" name="email" class="input" />
-        </div>
-        <div class="field input-field">
-          <input type="password" placeholder="Create password" name="password" class="password" />
-          @if (hidePasswordInput()) {
-            <app-icon class="eye-icon" [name]="IconName.EYE_OFF" (click)="togglePasswordVisibility($event)" />
-          } @else {
-            <app-icon class="eye-icon" [name]="IconName.EYE" (click)="togglePasswordVisibility($event)" />
-          }
-        </div>
-        <div class="field input-field">
-          <input
-            type="password"
-            placeholder="Confirm password"
-            name="confirmPassword"
-            class="password repeat-password"
-          />
-          @if (hideRepeatPasswordInput()) {
-            <app-icon class="eye-icon" [name]="IconName.EYE_OFF" (click)="togglePasswordVisibility($event)" />
-          } @else {
-            <app-icon class="eye-icon" [name]="IconName.EYE" (click)="togglePasswordVisibility($event)" />
-          }
-        </div>
-        <div class="field button-field">
-          <button>Register</button>
-        </div>
-      </form>
-      <div class="form-link mt-3">
-        <span
-          >Already have an account?
-          <a href="/login" class="link login-link" (click)="navigateTo($event)">Login</a></span
-        >
-      </div>
-    </div>
-    <div class="line"></div>
-    <div class="media-options">
-      <div
-        id="g_id_onload"
-        data-client_id="745778541640-0f05iimgfid2tag6rkvilau5nqt69ko0.apps.googleusercontent.com"
-        data-context="signin"
-        data-ux_mode="popup"
-        [attr.data-login_uri]="oauthRoute"
-        data-auto_prompt="false"
-      ></div>
+<h1 class="headline text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">
+  TYR TRAINING SYSTEMS
+  <span class="fs-900 ff-serif">TYR</span>
+</h1>
 
-      <div
-        class="g_id_signin"
-        data-type="standard"
-        data-shape="rectangular"
-        data-theme="outline"
-        data-text="signin_with"
-        data-size="large"
-        data-logo_alignment="left"
-        #googleLoginButton
-      ></div>
-    </div>
-  </div>
-</section>
-
-<div class="custom-google-login">
-  <button (click)="triggerGoogleLogin()">Login with Google</button>
-</div>
-
-<app-pulsating-circle [text]="'Start'" />
+<app-pulsating-circle [text]="'Start'" (click)="triggerGoogleLogin()" />
