Fix fetch for statistics page and use signal for loading state in view

--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -1,6 +1,4 @@
-@if (!(dataViewLoaded$ | async)) {
-  <app-spinner />
-} @else {
+@if (viewInitialized()) {
   <form id="form">
     <table
       class="table table-striped training-table responsive-table caption-top mb-4"
@@ -152,4 +150,6 @@
       />
     </div>
   </div>
+} @else {
+  <app-spinner />
 }
