--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -36,12 +36,12 @@
               estMax: '',
             };
 
-          @let namePrefix = 'day' + trainingDayIndex + '_exercise' + k + '_';
+          @let namePrefix = 'day' + trainingDayIndex() + '_exercise' + k + '_';
 
           <tr>
             <td data-cell="Category">
               <app-dropdown
-                name="day{{ trainingDayIndex }}_exercise{{ k }}_category"
+                [name]="namePrefix + '_category'"
                 class="exercise-category-selector"
                 [options]="exerciseDataService.exerciseCategories"
                 [directiveUsed]="'category-select'"
@@ -53,7 +53,7 @@
             </td>
             <td data-cell="Exercise">
               <app-dropdown
-                name="day{{ trainingDayIndex }}_exercise{{ k }}_exercise_name"
+                [name]="namePrefix + 'exercise_name'"
                 class="exercise-name-selector"
                 [options]="exerciseDataService.categorizedExercises[exercise.category]"
                 [(selectedValue)]="exercise.exercise"
@@ -128,16 +128,16 @@
 
   <div class="navigation-container">
     <app-pagination
-      [currentPage]="trainingDayIndex"
+      [currentPage]="trainingDayIndex()"
       [totalPages]="trainingDataService.trainingPlanData.trainingFrequency"
-      (pageChanged)="navigateDay($event, trainingWeekIndex)"
+      (pageChanged)="navigationService.navigateDay($event)"
     />
 
     <div>
       <app-icon
         class="week-navigation-icon"
         [appTooltip]="'Vorherige Woche'"
-        (click)="navigateWeek(-1)"
+        (click)="navigationService.navigateWeek(NavigationDirection.BACKWARD, this.trainingDayIndex())"
         [name]="IconName.CHEVRON_LEFT"
         [size]="28"
       />
@@ -145,7 +145,7 @@
         class="week-navigation-icon"
         [appTooltip]="'Näcshte Woche'"
         [name]="IconName.CHEVRON_RIGHT"
-        (click)="navigateWeek(1)"
+        (click)="navigationService.navigateWeek(NavigationDirection.FORWARD, this.trainingDayIndex())"
         [size]="28"
       />
     </div>
