Fix typings and fix set is not saved

--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -64,12 +64,7 @@
               />
             </td>
             <td data-cell="Sets">
-              <app-input
-                class="sets"
-                [type]="'number'"
-                [name]="'day' + trainingDayIndex + '_exercise' + k + '_sets'"
-                [value]="exercise.sets"
-              />
+              <app-input class="sets" [type]="'number'" [name]="namePrefix + '_sets'" [value]="exercise.sets" />
             </td>
             <td data-cell="Reps">
               <app-input
