--- a/client/src/app/features/training-plans/training-view/training-exercises-list/training-exercises-list.component.html
+++ b/client/src/app/features/training-plans/training-view/training-exercises-list/training-exercises-list.component.html
@@ -1,5 +1,5 @@
 <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
-  @for (exercise of trainingPlanDataService.trainingDay.exercises; track exercise) {
+  @for (exercise of this.trainingPlanDataService.trainingDay.exercises; track exercise.reps) {
     <div class="example-box" cdkDrag>{{ exercise.exercise }}</div>
   }
 </div>
