--- a/client/src/app/features/training-plans/training-view/training-exercises-list/training-exercises-list.component.scss
+++ b/client/src/app/features/training-plans/training-view/training-exercises-list/training-exercises-list.component.scss
@@ -1,7 +1,6 @@
-.example-list {
+.exercise-list {
   width: 500px;
   max-width: 100%;
-  border: solid 1px #ccc;
   min-height: 60px;
   display: block;
   background: white;
@@ -9,7 +8,7 @@
   overflow: hidden;
 }
 
-.example-box {
+.exercise-list-item {
   padding: 20px 10px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
@@ -21,6 +20,7 @@
   cursor: move;
   background: white;
   font-size: 14px;
+  overflow: hidden;
 }
 
 .cdk-drag-preview {
@@ -36,11 +36,11 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-box:last-child {
+.exercise-list-item:last-child {
   border: none;
 }
 
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+.exercise-list.cdk-drop-list-dragging .exercise-list-item:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
