--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -1,51 +1,25 @@
 <div class="search-bar-container" [@toggleCollapse]="isSearchbarCollapsed() ? 'collapsed' : 'expanded'">
   <app-search-bar [(searchQuery)]="trainingPlanSearchQuery" />
 </div>
-
-@if (isDragMode()) {
-  <div class="row">
-    @if (!isLoading()) {
-      @if (filteredTrainingPlans().length === 0) {
-        <app-alert alertText="Keine deiner bestehenden Trainingpläne passen zu dieser Suchanfrage!" />
-      } @else {
-        <div class="training-plan-grid">
-          @for (trainingPlan of filteredTrainingPlans(); track trainingPlan.id) {
-            <div class="training-plan-card-container" cdkDrag>
-              <app-training-plan-card [trainingPlan]="trainingPlan" />
-
-              <app-circular-icon-button [icon]="IconName.DRAG" [iconSize]="18" cdkDragHandle />
-            </div>
-          }
-        </div>
-      }
-    } @else {
-      <ng-container *ngTemplateOutlet="skeletonLoader"></ng-container>
+<div class="row">
+  @if (!isLoading()) {
+    @if (trainingPlanService.trainingPlans().length === 0) {
+      <app-alert alertText="Du hast noch keine Trainingspläne erstellt" />
+    } @else if (filteredTrainingPlans().length === 0) {
+      <app-alert alertText="Keine deiner bestehenden Trainingpläne passen zu dieser Suchanfrage!" />
     }
-  </div>
-} @else {
-  <div class="row">
-    @if (!isLoading()) {
-      @if (filteredTrainingPlans().length === 0) {
-        <app-alert alertText="Keine deiner bestehenden Trainingpläne passen zu dieser Suchanfrage!" />
-      } @else {
-        <div class="training-plan-grid">
-          @for (trainingPlan of filteredTrainingPlans(); track trainingPlan.id) {
-            <div class="training-plan-card-container">
-              <app-training-plan-card [trainingPlan]="trainingPlan" />
-            </div>
-          }
-        </div>
-      }
-    } @else {
-      <ng-container *ngTemplateOutlet="skeletonLoader"></ng-container>
-    }
-  </div>
-}
-
-<ng-template #skeletonLoader>
-  @for (k of [1, 2, 3]; track k) {
     <div class="training-plan-grid">
-      <app-skeleton-card />
+      @for (trainingPlan of filteredTrainingPlans(); track trainingPlan.id) {
+        <div class="training-plan-card-container">
+          <app-training-plan-card [trainingPlan]="trainingPlan" />
+        </div>
+      }
     </div>
+  } @else {
+    @for (k of [1, 2, 3]; track k) {
+      <div class="training-plan-grid">
+        <app-skeleton-card />
+      </div>
+    }
   }
-</ng-template>
+</div>
